Fix issue with the nav links "jumping" when applying blue border on hover.

--- a/src/styles/css/nav.css
+++ b/src/styles/css/nav.css
@@ -23,6 +23,7 @@ nav li {
   padding: .5em;
   padding-right: 2em;
   transition: all 200ms;
+  border-right: 4px solid transparent; 
 }
 
 nav li:hover {
